Portfolio updated, done.

--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
 
-    <meta property="og:title" content="Othman Shareef" />
+    <meta property="og:title" content="Lucas Padilha" />
     <meta
       name="image"
       property="og:image"
       content="%PUBLIC_URL%/portfolio.JPG"
     />
-    <meta name="author" content="Othman Shareef" />
+    <meta name="author" content="Lucas Padilha" />
     <meta
       property="og:description"
       content="I'm a web developer with a demonstrated history of working in the Information Technology & Services industry for more than 6 years. I love working on projects, converting ideas and UI's to functional web applications and enjoy doing the front-end part because of my skills in user interface design. I create websites and web apps using javascript and typescript frameworks. I have skills in Software Engineering, Front-end web development, React JS, UI Design, Graphic Design, Photography, Translation, Blogging, Software Reviewing, and Management. I'm fast learner with, strong media and communication professional with an engineering degree focused in mechanical engineering from University of Mosul."
@@ -41,7 +41,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Othman Shareef</title>
+    <title>Lucas Padilha</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
