Added new buy me a coffee button, and fixed the animation on avatar.

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <meta name="author" content="Lucas Padilha" />
     <meta
       property="og:description"
-      content="I'm a web developer with a demonstrated history of working in the Information Technology & Services industry for more than 6 years. I love working on projects, converting ideas and UI's to functional web applications and enjoy doing the front-end part because of my skills in user interface design. I create websites and web apps using javascript and typescript frameworks. I have skills in Software Engineering, Front-end web development, React JS, UI Design, Graphic Design, Photography, Translation, Blogging, Software Reviewing, and Management. I'm fast learner with, strong media and communication professional with an engineering degree focused in mechanical engineering from University of Mosul."
+      content="You are very welcome to my point of contact!"
     />
     <meta property="og:url" content="https://othman.itechnopro.com" />
 
